samples/_failures_safe/1761127415_758e3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99943630.c: In function ‘main’:
./samples/SAFE/__tmp_99943630.c:144:9: error: expected expression at end of input
  144 |         } else
      |         ^
./samples/SAFE/__tmp_99943630.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99943630.c:144:9: error: expected declaration or statement at end of input
